# Rust-LogViewer

./: Cargo.toml  README.md  config.json  config.toml
src/: config.rs  index.html  log_parser.rs  log_watcher.rs  main.rs  routes.rs
