[package]
name = "log_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.7"
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
notify = "5.1"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
async-stream = "0.3"
serde_json = "1.0"
chrono = "0.4"